Update react folder location

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "individual-project1",
+  "name": "Dwoodcum1.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
